@@ -5619,6 +5619,93 @@ return|return
 name|updateLogDir
 return|;
 block|}
+comment|/**    * Close the core, if it is still in use waits until is no longer in use.    * @see #close()     * @see #isClosed()     */
+DECL|method|closeAndWait
+specifier|public
+name|void
+name|closeAndWait
+parameter_list|()
+block|{
+name|close
+argument_list|()
+expr_stmt|;
+while|while
+condition|(
+operator|!
+name|isClosed
+argument_list|()
+condition|)
+block|{
+specifier|final
+name|long
+name|milliSleep
+init|=
+literal|100
+decl_stmt|;
+name|log
+operator|.
+name|info
+argument_list|(
+literal|"Core {} is not yet closed, waiting {} ms before checking again."
+argument_list|,
+name|getName
+argument_list|()
+argument_list|,
+name|milliSleep
+argument_list|)
+expr_stmt|;
+try|try
+block|{
+name|Thread
+operator|.
+name|sleep
+argument_list|(
+name|milliSleep
+argument_list|)
+expr_stmt|;
+block|}
+catch|catch
+parameter_list|(
+name|InterruptedException
+name|e
+parameter_list|)
+block|{
+name|Thread
+operator|.
+name|currentThread
+argument_list|()
+operator|.
+name|interrupt
+argument_list|()
+expr_stmt|;
+throw|throw
+operator|new
+name|SolrException
+argument_list|(
+name|SolrException
+operator|.
+name|ErrorCode
+operator|.
+name|SERVER_ERROR
+argument_list|,
+literal|"Caught InterruptedException whilst waiting for core "
+operator|+
+name|getName
+argument_list|()
+operator|+
+literal|" to close: "
+operator|+
+name|e
+operator|.
+name|getMessage
+argument_list|()
+argument_list|,
+name|e
+argument_list|)
+throw|;
+block|}
+block|}
+block|}
 DECL|method|initCodec
 specifier|private
 name|Codec
