@@ -2350,6 +2350,7 @@ argument_list|,
 literal|false
 argument_list|)
 expr_stmt|;
+specifier|final
 name|SolrCore
 name|c1
 init|=
@@ -2360,6 +2361,7 @@ argument_list|(
 literal|"core1"
 argument_list|)
 decl_stmt|;
+specifier|final
 name|SolrCore
 name|c2
 init|=
@@ -2370,6 +2372,7 @@ argument_list|(
 literal|"core2"
 argument_list|)
 decl_stmt|;
+specifier|final
 name|SolrCore
 name|c3
 init|=
@@ -2380,6 +2383,7 @@ argument_list|(
 literal|"core3"
 argument_list|)
 decl_stmt|;
+specifier|final
 name|SolrCore
 name|c4
 init|=
@@ -2390,6 +2394,7 @@ argument_list|(
 literal|"core4"
 argument_list|)
 decl_stmt|;
+specifier|final
 name|SolrCore
 name|c5
 init|=
@@ -2440,6 +2445,140 @@ argument_list|)
 expr_stmt|;
 comment|// While we're at it, a test for SOLR-5366, unloading transient core that's been unloaded b/c it's
 comment|// transient generates a "too many closes" errorl
+class|class
+name|TestThread
+extends|extends
+name|Thread
+block|{
+annotation|@
+name|Override
+specifier|public
+name|void
+name|run
+parameter_list|()
+block|{
+specifier|final
+name|int
+name|sleep_millis
+init|=
+name|random
+argument_list|()
+operator|.
+name|nextInt
+argument_list|(
+literal|1000
+argument_list|)
+decl_stmt|;
+try|try
+block|{
+if|if
+condition|(
+name|sleep_millis
+operator|>
+literal|0
+condition|)
+block|{
+if|if
+condition|(
+name|VERBOSE
+condition|)
+block|{
+name|System
+operator|.
+name|out
+operator|.
+name|println
+argument_list|(
+literal|"TestLazyCores.testCreateTransientFromAdmin Thread.run sleeping for "
+operator|+
+name|sleep_millis
+operator|+
+literal|" ms"
+argument_list|)
+expr_stmt|;
+block|}
+name|Thread
+operator|.
+name|sleep
+argument_list|(
+name|sleep_millis
+argument_list|)
+expr_stmt|;
+block|}
+block|}
+catch|catch
+parameter_list|(
+name|InterruptedException
+name|ie
+parameter_list|)
+block|{
+if|if
+condition|(
+name|VERBOSE
+condition|)
+block|{
+name|System
+operator|.
+name|out
+operator|.
+name|println
+argument_list|(
+literal|"TestLazyCores.testCreateTransientFromAdmin Thread.run caught "
+operator|+
+name|ie
+operator|+
+literal|" whilst sleeping for "
+operator|+
+name|sleep_millis
+operator|+
+literal|" ms"
+argument_list|)
+expr_stmt|;
+block|}
+block|}
+name|c1
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
+name|c2
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
+name|c3
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
+name|c4
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
+name|c5
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
+block|}
+block|}
+empty_stmt|;
+comment|// with SOLR-6279 UNLOAD will wait for the core's reference count to have reached zero
+comment|// hence cN.close() need to preceed or run in parallel with unloadViaAdmin(...)
+specifier|final
+name|TestThread
+name|cThread
+init|=
+operator|new
+name|TestThread
+argument_list|()
+decl_stmt|;
+name|cThread
+operator|.
+name|start
+argument_list|()
+expr_stmt|;
 name|unloadViaAdmin
 argument_list|(
 name|cc
@@ -2475,29 +2614,9 @@ argument_list|,
 literal|"core5"
 argument_list|)
 expr_stmt|;
-name|c1
+name|cThread
 operator|.
-name|close
-argument_list|()
-expr_stmt|;
-name|c2
-operator|.
-name|close
-argument_list|()
-expr_stmt|;
-name|c3
-operator|.
-name|close
-argument_list|()
-expr_stmt|;
-name|c4
-operator|.
-name|close
-argument_list|()
-expr_stmt|;
-name|c5
-operator|.
-name|close
+name|join
 argument_list|()
 expr_stmt|;
 block|}
@@ -3990,6 +4109,242 @@ operator|.
 name|separator
 argument_list|)
 return|;
+block|}
+annotation|@
+name|Test
+DECL|method|testMidUseUnload
+specifier|public
+name|void
+name|testMidUseUnload
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+specifier|final
+name|int
+name|maximumSleepMillis
+init|=
+name|random
+argument_list|()
+operator|.
+name|nextInt
+argument_list|(
+literal|10000
+argument_list|)
+decl_stmt|;
+comment|// sleep for up to 10 s
+if|if
+condition|(
+name|VERBOSE
+condition|)
+block|{
+name|System
+operator|.
+name|out
+operator|.
+name|println
+argument_list|(
+literal|"TestLazyCores.testMidUseUnload maximumSleepMillis="
+operator|+
+name|maximumSleepMillis
+argument_list|)
+expr_stmt|;
+block|}
+class|class
+name|TestThread
+extends|extends
+name|Thread
+block|{
+name|SolrCore
+name|core_to_use
+init|=
+literal|null
+decl_stmt|;
+annotation|@
+name|Override
+specifier|public
+name|void
+name|run
+parameter_list|()
+block|{
+specifier|final
+name|int
+name|sleep_millis
+init|=
+name|random
+argument_list|()
+operator|.
+name|nextInt
+argument_list|(
+name|maximumSleepMillis
+argument_list|)
+decl_stmt|;
+try|try
+block|{
+if|if
+condition|(
+name|sleep_millis
+operator|>
+literal|0
+condition|)
+block|{
+if|if
+condition|(
+name|VERBOSE
+condition|)
+block|{
+name|System
+operator|.
+name|out
+operator|.
+name|println
+argument_list|(
+literal|"TestLazyCores.testMidUseUnload Thread.run sleeping for "
+operator|+
+name|sleep_millis
+operator|+
+literal|" ms"
+argument_list|)
+expr_stmt|;
+block|}
+name|Thread
+operator|.
+name|sleep
+argument_list|(
+name|sleep_millis
+argument_list|)
+expr_stmt|;
+block|}
+block|}
+catch|catch
+parameter_list|(
+name|InterruptedException
+name|ie
+parameter_list|)
+block|{
+if|if
+condition|(
+name|VERBOSE
+condition|)
+block|{
+name|System
+operator|.
+name|out
+operator|.
+name|println
+argument_list|(
+literal|"TestLazyCores.testMidUseUnload Thread.run caught "
+operator|+
+name|ie
+operator|+
+literal|" whilst sleeping for "
+operator|+
+name|sleep_millis
+operator|+
+literal|" ms"
+argument_list|)
+expr_stmt|;
+block|}
+block|}
+name|assertFalse
+argument_list|(
+name|core_to_use
+operator|.
+name|isClosed
+argument_list|()
+argument_list|)
+expr_stmt|;
+comment|// not closed since we are still using it and hold a reference
+name|core_to_use
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
+comment|// now give up our reference to the core
+block|}
+block|}
+empty_stmt|;
+name|CoreContainer
+name|cc
+init|=
+name|init
+argument_list|()
+decl_stmt|;
+try|try
+block|{
+name|TestThread
+name|thread
+init|=
+operator|new
+name|TestThread
+argument_list|()
+decl_stmt|;
+name|thread
+operator|.
+name|core_to_use
+operator|=
+name|cc
+operator|.
+name|getCore
+argument_list|(
+literal|"collection1"
+argument_list|)
+expr_stmt|;
+name|assertNotNull
+argument_list|(
+name|thread
+operator|.
+name|core_to_use
+argument_list|)
+expr_stmt|;
+name|assertFalse
+argument_list|(
+name|thread
+operator|.
+name|core_to_use
+operator|.
+name|isClosed
+argument_list|()
+argument_list|)
+expr_stmt|;
+comment|// freshly-in-use core is not closed
+name|thread
+operator|.
+name|start
+argument_list|()
+expr_stmt|;
+name|unloadViaAdmin
+argument_list|(
+name|cc
+argument_list|,
+literal|"collection1"
+argument_list|)
+expr_stmt|;
+name|assertTrue
+argument_list|(
+name|thread
+operator|.
+name|core_to_use
+operator|.
+name|isClosed
+argument_list|()
+argument_list|)
+expr_stmt|;
+comment|// after unload-ing the core is closed
+name|thread
+operator|.
+name|join
+argument_list|()
+expr_stmt|;
+block|}
+finally|finally
+block|{
+name|cc
+operator|.
+name|shutdown
+argument_list|()
+expr_stmt|;
+block|}
 block|}
 block|}
 end_class
